force-app/main/default/objects/Referral__c/fields/Worker_Name__c.field-meta.xml
<CustomField>
    <fullName>Worker_Name__c</fullName>
    <formula>IF(CreatedById != Null, CreatedBy.FirstName+&apos; &apos;+ CreatedBy.MiddleName+&apos; &apos;+ CreatedBy.LastName , $User.FirstName+&apos; &apos;+ $User.MiddleName+&apos; &apos;+ $User.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worker Name</label>
    <type>Text</type>
</CustomField>