force-app/main/default/objects/Referral__c/recordTypes/Local_Department_home.recordType-meta.xml
<RecordType>
    <fullName>Local_Department_home</fullName>
    <active>true</active>
    <label>Local Department home</label>
</RecordType>