force-app/main/default/objects/Referral__c/recordTypes/Private_Organization.recordType-meta.xml
<RecordType>
    <fullName>Private_Organization</fullName>
    <active>true</active>
    <label>Private Organization</label>
</RecordType>