force-app/main/default/objects/Referral__c/validationRules/Organization_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Organization_Name_Required</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(OR(ISPICKVAL(Type__c, &apos;Local Department Home&apos;), ISPICKVAL(Type__c, &apos;CPA Home&apos;))) &amp;&amp; Organization_Site_Name__c = &apos;&apos;</errorConditionFormula>
    <errorDisplayField>Organization_Name__c</errorDisplayField>
    <errorMessage>Organization Name is Required</errorMessage>
</ValidationRule>