force-app/main/default/objects/Referral__c/validationRules/Type_Changes_Based_on_Referal_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Changes_Based_on_Referal_Status</fullName>
    <active>false</active>
    <errorConditionFormula>AND((ISPICKVAL(Referal_status__c,&quot;ReOpened&quot;)), (ISCHANGED( Type__c )))</errorConditionFormula>
    <errorMessage>Can&apos;t chage the Type value, When Referal status is ReOpened.</errorMessage>
</ValidationRule>