force-app/main/default/objects/Referral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applicant_First_Name__c</columns>
    <columns>Applicant_Last_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Supervisor_Approval__c</columns>
    <columns>Referal_status__c</columns>
    <columns>Provider_Referral_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>