force-app/main/default/objects/Referral__c/listViews/Provider_Referral.listView-meta.xml
<ListView>
    <fullName>Provider_Referral</fullName>
    <columns>NAME</columns>
    <columns>CPA_Office_ID__c</columns>
    <columns>Provider_Referral_ID__c</columns>
    <columns>Referal_status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Provider Referral</label>
</ListView>