force-app/main/default/objects/Referral__c/listViews/Today_Creation.listView-meta.xml
<ListView>
    <fullName>Today_Creation</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Creation</label>
</ListView>